# fastron

./: CMakeLists.txt  README.md  package.xml
include/: fastron.h
launch/: baxter_fastron_collision_checking_test.launch  baxter_fastron_collision_checking_test_multiobs.launch  baxter_fastron_motion_planning_multiobject_test.launch  baxter_fastron_motion_planning_test.launch  baxter_fastron_motion_planning_visualize_test.launch  baxter_launch.launch  fastron_baxter.rviz  fastron_baxter2.rviz  fastron_baxter_example.rviz  fastron_baxter_visualize_plan.rviz
src/: fastron.cpp  fastronCollisionCheckingTests7D.cpp  fastronCollisionCheckingTestsMultiobject.cpp  fastronCollisionCheckingTestsMultiobject2.cpp  fastronCollisionCheckingTestsMultiobject3.cpp  fastronCollisionCheckingTestsMultiobject4.cpp  fastronMotionPlanningMultiobjectTests.cpp  fastronMotionPlanningTests.cpp  fastronMotionPlanningVisualizeTests.cpp  fastronNodeTestScript.cpp  parser.cpp
